# openedx-ai-extensions

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml
backend/openedx_ai_extensions/: __init__.py  admin.py  apps.py  decorators.py  receivers.py  utils.py
backend/openedx_ai_extensions/events/: data.py  signals.py
backend/openedx_ai_extensions/fixtures/: demo_profiles.json
backend/openedx_ai_extensions/processors/: litellm_base_processor.py  llm_processor.py
backend/openedx_ai_extensions/processors/llm/: educator_assistant_processor.py  litellm_base_processor.py  llm_processor.py
backend/openedx_ai_extensions/processors/openedx/: openedx_processor.py  submission_processor.py
backend/openedx_ai_extensions/prompts/: default_generate_flashcards.txt
backend/openedx_ai_extensions/response_schemas/: flashcards.json
backend/openedx_ai_extensions/settings/: common.py
backend/openedx_ai_extensions/workflows/: models.py  orchestrators.py
backend/openedx_ai_extensions/workflows/orchestrators/: base_orchestrator.py  direct_orchestrator.py  flashcards_orchestrator.py  (+2 more)
backend/openedx_ai_extensions/xapi/: constants.py  transformers.py
backend/requirements/: base.in  base.txt  constraints.txt  dev.txt  doc.txt  quality.txt  test.txt
backend/tests/: test_api.py  test_base_orchestrator.py  test_direct_orchestrator.py  test_educator_assistant_processor.py  test_events.py  test_flashcards_orchestrator.py  test_integration_base_profiles.py  test_litellm_base_processor.py  test_llm_processor.py  test_models.py  test_openedx_processor.py  test_plugin_integration.py  test_receivers.py  test_submission_processor.py  test_utils.py  test_workflows.py
docs/decisions/: 0004-llm-caching-strategy.rst  0004-submission-as-chat-storage.rst  0005-xblock-ai-service-registration.rst  0006-event-bus-consumer-via-openedx-events.rst
docs/quickstarts/: extension_guide.rst  index.rst  usage_guide.rst
frontend/: package-lock.json  package.json
frontend/src/: ConfigurableAIAssistance.jsx  ConfigurableAIAssistance.tsx  GetAIAssistanceButton.jsx  GetAIAssistanceButton.tsx  constants.ts  index.tsx  messages.ts  setupTest.tsx
frontend/src/components/: AIEducatorLibraryAssistComponent.jsx  AISidebarResponse.jsx  AISidebarResponse.tsx  index.tsx  sidebar.scss
frontend/src/flashcard-study/: index.ts  messages.ts  types.ts  utils.test.ts  utils.ts
frontend/src/library-problem-creator/: messages.ts
frontend/src/services/: aiPipelineService.ts  constants.js  utils.ts
tutor/openedx_ai_extensions/: plugin.py
tutor/openedx_ai_extensions/patches/: mfe-dockerfile-post-npm-install-authoring  mfe-dockerfile-post-npm-install-learning  mfe-dockerfile-pre-npm-install-authoring  mfe-dockerfile-pre-npm-install-learning  openedx-common-settings  superset-extra-assets
(+30 files in other folders)
