# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "openedx-ai-extensions"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "The Open edX Community"},
    {email = "oscm@axim.org"}
]
maintainers = [
    {name = "The Open edX Community"},
    {email = "oscm@axim.org"}
]
description = "AI Extensibility Framework plugin for Tutor"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tutor>=20.0.0,<22.0.0",
    "tutor-mfe>=20.0.0,<22.0.0",
]

# these fields will be set by .hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]>=20.0.0,<22.0.0",
    "pylint",
]

[project.entry-points."tutor.plugin.v1"]
openedx-ai-extensions = "openedx_ai_extensions.plugin"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://github.com/openedx/openedx-ai-extensions"
Documentation = "https://github.com/openedx/openedx-ai-extensions/blob/main/README.rst"
Code = "https://github.com/openedx/openedx-ai-extensions"
Issues = "https://github.com/openedx/openedx-ai-extensions/issues"
Changelog = "https://github.com/openedx/openedx-ai-extensions/blob/main/CHANGELOG.rst"
Community = "https://discuss.openedx.org"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = "tutor/.hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [
    "/tutor/openedx_ai_extensions",
    "/tutor/.hatch_build.py",
    "/backend",
    "/frontend"
]
exclude = [
    "/frontend/node_modules"
]

[tool.hatch.build.targets.wheel]
packages = ["tutor/openedx_ai_extensions"]
only-include = [
    "tutor/openedx_ai_extensions",
]

[tool.hatch.build.targets.wheel.force-include]
"backend/" = "openedx-ai-extensions-backend"
"frontend/" = "openedx-ai-extensions-frontend"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = docs
skipsdist = true

[testenv:docs]
description = Build Sphinx documentation
changedir = docs
deps =
    sphinx
    sphinx-book-theme
    -r{toxinidir}/backend/requirements/doc.txt
    -e {toxinidir}/backend
commands =
    sphinx-build -b html -W --keep-going . _build/html
"""
